Add custom code (login , profile )

--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
         "redux": "4.0.1",
         "redux-thunk": "2.3.0",
         "typeface-muli": "0.0.71",
-        "velocity-react": "1.4.3"
+        "velocity-react": "1.4.3",
+        "react-toast-notifications": "^2.5.1",
+        "js-cookie": "^3.0.1"
     },
     "resolutions": {
         "react": "16.8.6",
